<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              tools:context=".page.UserPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="227dp"
            app:srcCompat="@drawable/icon"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome_user"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/USER_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_your_money_is"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/USER_money"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/yuan"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/please_input_manage_money"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/USER_please_input_manage_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:digits="-.0123456789"
                android:inputType="number"
                android:hint="@string/positive_plus_negative_minus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/USER_please_input_explanatory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="textPersonName"
                android:hint="@string/please_input_explanatory"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/USER_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_green_10dp"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/USER_query_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_blue_10dp"
                android:text="@string/query_record"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/USER_change_password"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_orange"
                android:text="@string/change_password"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/USER_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_red_10dp"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:text="@string/logout"/>
            <Button
                android:id="@+id/USER_delete_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@drawable/button_red_10dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:text="@string/delete_account"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>