<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              tools:context=".page.UserPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="227dp"
            app:srcCompat="@drawable/icon"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome_admin"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/ADMIN_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ADMIN_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_green_10dp"
                android:text="@string/add"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/ADMIN_query_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_blue_10dp"
                android:text="@string/query_record"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/ADMIN_change_password"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_orange"
                android:text="@string/change_password"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ADMIN_manage_user"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/manage_user"
                android:background="@drawable/button_orange"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/ADMIN_logout"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_red_10dp"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:text="@string/logout"/>
            <Button
                android:id="@+id/ADMIN_delete_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_red_10dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:text="@string/delete_account"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>