<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.ManageUserPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">
        <EditText
            android:layout_marginTop="250dp"
            android:id="@+id/MANAGE_USER_please_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/please_input_username"
        android:textSize="25sp"/>
        <EditText
            android:id="@+id/MANAGE_USER_please_input_decimal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:digits="-0.123456789"
            android:hint="@string/please_input_manage_money"
            android:textSize="25sp"
            android:inputType="number"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/MANAGE_USER_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_green_15dp"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/MANAGE_USER_back"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:background="@drawable/button_red_15dp"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>