<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".page.LoginPage"
              android:background="@android:color/white"
              tools:layout_editor_absoluteY="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="50sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ADMIN_ADD_please_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:hint="@string/please_input_username"
                android:inputType="textPersonName"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ADMIN_ADD_please_input_decimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0"
                android:hint="@string/please_input_decimal"
                android:digits="-0.123456789"
                android:inputType="number"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ADMIN_ADD_add_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_green_10dp"
                    android:text="@string/add_user"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"/>

                <Button
                    android:id="@+id/ADMIN_ADD_add_admin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_blue_10dp"
                    android:text="@string/add_admin"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp"/>
                <Button
                    android:id="@+id/ADMIN_ADD_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_red_10dp"
                    android:text="@string/back"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>