<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".page.ChangePasswordPage">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/CHANGE_PASSWORD_please_input_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/please_input_old_password"
                android:textSize="25sp"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/CHANGE_PASSWORD_please_input_new_password"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/please_input_new_password"
                android:textSize="25sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            tools:layout_editor_absoluteY="37dp">
            <Button
                android:id="@+id/CHANGE_PASSWORD_confirm"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_green_15dp"
                android:text="@string/confirm"/>
            <Button
                android:id="@+id/CHANGE_PASSWORD_back"
                android:layout_marginLeft="30dp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_red_15dp"
                android:text="@string/back"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>