<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".page.LoginPage"
              android:background="@android:color/white"
              tools:layout_editor_absoluteY="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="50sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">

            <!--            <TextView-->
            <!--                android:id="@+id/textView"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="0"-->
            <!--                android:text="@string/username"-->
            <!--                android:textColor="@android:color/black"-->
            <!--                android:textSize="30sp" />-->

            <EditText
                android:id="@+id/LOGIN_please_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:hint="@string/please_input_username"
                android:inputType="textPersonName"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--            <TextView-->
            <!--                android:id="@+id/textView2"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="0"-->
            <!--                android:text="@string/password"-->
            <!--                android:textColor="@android:color/black"-->
            <!--                android:textSize="30sp" />-->

            <EditText
                android:id="@+id/LOGIN_please_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0"
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/LOGIN_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_green_10dp"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"/>

                <Button
                    android:id="@+id/LOGIN_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/button_red_10dp"
                    android:text="@string/exit"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"/>

                <Button
                    android:id="@+id/LOGIN_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/button_blue_10dp"
                    android:text="@string/register"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>